Refactor: move terminal specific code to FastTerminal3D and add FastTheme